# fortified

./: .gitignore  AUTHORS  ChangeLog  MODS  Makefile.am  NEWS  README  cann.mods  configure.ac  nonadmd.mods  requirements.txt
data/: NOTES  cubic.plt  gencubicdataset.f90  gendoublewelldataset.f90  genxordataset.f90  genxorsequentialdataset.f90  genzpotdataset.f90  get5bitresidue.f90  residuemap.txt  xor.plt  xor.seqdat  xorpoisson.plt  xorseq.plt  xorsinusoid.plt  zpot.plt
libexec/: NOTES
ontology/: action_rationalorder.noun  amount_rationalorder.noun  angle_rationalorder.noun  charge_rationalorder.noun  example_concept.noun  example_dimension.noun  example_instantial.noun  example_instantial2.noun  example_quantity.noun  example_subconcept.noun  example_units.noun  example_value.noun  length_rationalorder.noun  magnitude.noun  mass_rationalorder.noun  physical_units.noun  positiveconstraint.noun  temperature_rationalorder.noun  verb.tbl
src/: GQFPE.f90  MDutils.f90  Makefile.am  TEMPLATE.f90  atomicunits.f90  bpg.f90  coretests.f90  cukier.f90  device.f90  doublewell.f90  driver.f90  fauxnon.f90  ffn.f90  filemanager.f90  folly.sh  functions.f90  ham.f90  hs.f90  lapack.f  layer.f90  layertests.f90  math.f90  metiu.f90  molreader.f90  ontologyparser.f90  progressbar.f90  quasiparticle.f90  rand.f90  sbham.f90  som.f90  string.f90  template.f90  test_driver.f90  testdriver1.in  testdriver2.in  testdriver3.in  testdriver4.in  testdrivercap.in  testing.f90  type_kinds.f90  (+4 more)
testing/: README  test_ontologyparser.f90
